.aws/ecs.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: Template for creating ECR repository and ECS cluster for Padel Booking application

Resources:

  # ECR Repository for storing Docker images (in this case only padel booking)
  ECRRepository:
    Type: "AWS::ECR::Repository"
    Properties:
      RepositoryName: "padel-booking-repo"

  # Virtual Private Cloud (VPC) for the ECS cluster
  VPC:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: "10.0.0.0/16"

  # Subnet within the VPC for the ECS cluster
  Subnet:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref VPC
      CidrBlock: "10.0.0.0/24"
      MapPublicIpOnLaunch: true

  # Internet Gateway to enable internet access within the VPC
  InternetGateway:
    Type: "AWS::EC2::InternetGateway"

  # Attachment of Internet Gateway to the VPC
  AttachGateway:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  # Route Table for routing traffic within the VPC
  RouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPC

  # Route for directing internet-bound traffic to the Internet Gateway
  Route:
    Type: "AWS::EC2::Route"
    DependsOn: "AttachGateway"
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref InternetGateway

  # Association between Subnet and Route Table
  SubnetRouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref Subnet
      RouteTableId: !Ref RouteTable

  # IAM Role necessary for ECS tasks
  ECSRole:
    Type: "AWS::IAM::Role"
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: "Allow"
            Principal:
              Service: "ecs.amazonaws.com"
            Action: "sts:AssumeRole"
      Policies:
        - PolicyName: "ECSCloudwatchLogsPolicy"
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: "Allow"
                Action:
                  - "logs:CreateLogStream"
                  - "logs:PutLogEvents"
                Resource: "arn:aws:logs:*:*:*"

  # ECS Cluster to run containerized applications
  ECSCluster:
    Type: "AWS::ECS::Cluster"
    Properties:
      ClusterName: padel-booking-cluster

  # ECS Service for running tasks within the cluster
  Service:
    Type: "AWS::ECS::Service"
    DependsOn: ListenerRule
    Properties:
      Cluster: !Ref ECSCluster
      ServiceName: "padel-booking-service"
      TaskDefinition: !Ref TaskDefinition
      DesiredCount: 1
      LaunchType: "FARGATE"
      NetworkConfiguration:
        AwsvpcConfiguration:
          Subnets:
            - !Ref Subnet
          SecurityGroups:
            - !GetAtt ECSSecurityGroup.GroupId
          AssignPublicIp: "ENABLED"
  
  # ECS Task Definition for defining containers and resources
  TaskDefinition:
    Type: "AWS::ECS::TaskDefinition"
    Properties:
      Family: "padel-booking-task"
      Cpu: "256"
      Memory: "512"
      NetworkMode: "awsvpc"
      RequiresCompatibilities:
        - "FARGATE"
      ExecutionRoleArn: !GetAtt ECSRole.Arn
      ContainerDefinitions:
        - Name: "padel-booking-container"
          Image: !Join ["", [!Ref ECRRepository, ":", "latest"]]
          PortMappings:
            - ContainerPort: 3000
          LogConfiguration:
            LogDriver: "awslogs"
            Options:
              awslogs-group: !Join ["-", [!Ref "AWS::StackName", "ecslogs"]]
              awslogs-region: !Ref "AWS::Region"
              awslogs-stream-prefix: "padel-booking"

  # Security Group for controlling inbound traffic to ECS Service
  ECSSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Security Group for ECS Service"
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          SourceSecurityGroupId: !Ref ALBSecurityGroup

  # Security Group for controlling inbound traffic to ALB
  ALBSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Security Group for ALB"
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: "0.0.0.0/0"

  # Application Load Balancer for routing HTTP traffic  
  LoadBalancer:
    Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
    Properties:
      Scheme: internet-facing
      Subnets:
        - !Ref Subnet
      SecurityGroups:
        - !Ref ALBSecurityGroup
  
  # Listener for defining how ALB handles incoming traffic
  Listener:
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref TargetGroup
      LoadBalancerArn: !Ref LoadBalancer
      Port: 80
      Protocol: HTTP

  # Target Group for routing traffic to ECS Service
  TargetGroup:
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    Properties:
      Port: 3000
      Protocol: HTTP
      VpcId: !Ref VPC
      TargetType: ip
      Matcher:
        HttpCode: 200

  # Listener Rule for defining conditions to route traffic
  ListenerRule:
    Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
    Properties:
      Actions:
        - Type: forward
          TargetGroupArn: !Ref TargetGroup
      Conditions:
        - Field: path-pattern
          Values: ["/padel-booking"]
      ListenerArn: !Ref Listener
      Priority: 1
